# VC6CV

./: CMakeLists.txt  Commands.md  LICENSE  README.md  main_gl.cpp
camera/: camGL.c  camGL.h  gcs.c  gcs.h
gl/: defines.hpp  eglUtil.c  eglUtil.h  glhelp.h  mesh.cpp  mesh.hpp  shader.hpp  texture.cpp  texture.hpp
gl_shaders/CamES/: vert_barrel.glsl
